<resources>
    <string name="app_name">smartKey</string>
    <string name="login_button_label">Login</string>
    <string name="register_button_label">Confirm</string>
    <string name="password_textview_label">Password</string>
    <string name="email_textview_label">Email</string>
    <string name="repeat_email_textview_label">Repeat Email</string>
    <string name="name_textview_label">Name</string>
    <string name="register_label">Register</string>
    <string name="forgotten_password_label">Have you forgotten your password?</string>
    <string name="home_title_label">Home</string>
    <string name="profile_label">Profile</string>
    <string name="logout_label">Logout</string>
    <string name="open_label">OPEN</string>
    <string name="closed_label">CLOSED</string>
    <string name="latitude_label">Latitude:</string>
    <string name="longitude_label">Longitude:</string>
    <string name="title_activity_maps">Map</string>
    <string name="reset_password_label">Reset your password</string>
    <string name="cancelLabel">Cancel</string>
    <string name="send_label">Send</string>
    <string name="map_label">Map</string>
    <string name="UUID">00001101-0000-1000-8000-00805F9B34FB</string>
</resources>
